<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:id="@+id/list_ranking"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp"
            android:textColor="@color/md_red_600"

            android:id="@+id/topNum" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:id="@+id/image"
                android:contentDescription="@string/ProfilePicture" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="28sp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:id="@+id/name"
                    />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/Friendliness"
            android:textSize="22sp"
            android:id="@+id/friendliness"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:layout_marginRight="10dp"
                android:id="@+id/friendliness_score"
                android:layout_gravity="left" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/friendliness_rating"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:text="@string/Skills"
            android:textSize="22sp"
            android:id="@+id/skills"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:layout_marginRight="10dp"
                android:id="@+id/skills_score"
                android:layout_gravity="left" />

            <RatingBar android:progressDrawable="@drawable/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/skills_rating"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:text="@string/Teamwork"
            android:textSize="22sp"
            android:id="@+id/teamwork"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:layout_marginRight="10dp"
                android:id="@+id/teamwork_score"
                android:layout_gravity="left" />

            <RatingBar android:progressDrawable="@drawable/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamwork_rating"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:text="@string/FunFactor"
            android:textSize="22sp"
            android:id="@+id/funfactor"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:layout_marginRight="10dp"
                android:id="@+id/funfactor_score"
                android:layout_gravity="left" />

            <RatingBar android:progressDrawable="@drawable/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/funfactor_rating"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:text="Average"
            android:textSize="22sp"
            android:id="@+id/average"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:layout_marginRight="10dp"
                android:id="@+id/average_score"
                android:layout_gravity="left" />

            <RatingBar android:progressDrawable="@drawable/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/average_rating"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true"/>
        </LinearLayout>



    </LinearLayout>


</android.support.v7.widget.CardView>