<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:isScrollContainer="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gevdev.stalky.RateActivity"
    tools:showIn="@layout/rate_activity_layout">

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rate_activity_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/leaveRating"
                android:textSize="30dp"
                android:gravity="top"
                android:textColor="@color/md_blue_400" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:padding="15dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Friendliness"
                android:textSize="22dp"
                android:layout_marginTop="5dp"
                android:id="@+id/friendliness"
                />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="22dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/friendliness_score"
                    android:layout_gravity="center_vertical|left" />

                <RatingBar
                    android:progressDrawable="@drawable/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/friendliness_rating"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Skills"
                android:textSize="22dp"
                android:id="@+id/skills"
                />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="22dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/skills_score"
                    android:layout_gravity="center_vertical|left" />

                <RatingBar
                    android:progressDrawable="@drawable/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/skills_rating"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Teamwork"
                android:textSize="22dp"
                android:id="@+id/teamwork"
                />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="22dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/teamwork_score"
                    android:layout_gravity="center_vertical|left" />

                <RatingBar
                    android:progressDrawable="@drawable/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/teamwork_rating"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FunFactor"
                android:textSize="22dp"
                android:id="@+id/funfactor"
                />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="22dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/funfactor_score"
                    android:layout_gravity="center_vertical|left" />

                <RatingBar
                    android:progressDrawable="@drawable/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/funfactor_rating"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Leave a comment"
                    android:textSize="15dp"
                    />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/md_blue_grey_100">
                    <requestFocus />
                </EditText>

            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit_btn"
                android:textColor="#F1EFE2"
                android:textSize="22dp"
                android:text="Submit"
                android:layout_gravity="center"
                android:background="@color/md_blue_400"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.DrawerLayout>



</RelativeLayout>
